
syntax = "proto3";

package decentraland.ecs;

message PBBoxShape {  
  bool with_collisions = 1;
  bool is_pointer_blocker = 2;
  bool visible = 3;
  repeated float uvs = 4;
}